[project]
name = "polodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"

packages = [{ include = "polodb" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = []

[build-system]
requires = ["poetry-core", "maturin>=1,<2"]
build-backend = "maturin"

[tool.poetry.scripts]
build-rust = "maturin develop"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.18.1",
    "maturin>=1.7.4",
    "pip>=24.3.1",
    "pytest>=8.3.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
polodb = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [
  "."
]